Update to Elasticsearch 2.4.4 and Lucene 5.5.2
Signed-off-by: sjudeng <sjudeng@users.noreply.github.com>